--- a/app/templates/includes/user_menu.html
+++ b/app/templates/includes/user_menu.html
@@ -36,14 +36,13 @@
         {% if is_company_admin %}
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item text-dark" href="/companies_of_administrator">
-            <i class="bi bi-bell me-2"></i>Manage Company
-            <span class="badge bg-danger">3</span>
+            <i class="bi bi-building-add me-2"></i></i>Manage Company
         </a></li>
         <li><a class="dropdown-item text-dark" href="/manage_employee">
             <i class="bi bi-person-x me-2"></i>Manage Employee
         </a></li>
         <li><a class="dropdown-item text-dark" href="/company_admin/token">
-            <i class="bi bi-building-x me-2"></i>Manage Token
+            <i class="bi bi-coin me-2"></i>Manage Token
         </a></li>
         {% endif %}
 
