Delete employee e centralizzazione trash e search funzionante

--- a/app/templates/manage_user.html
+++ b/app/templates/manage_user.html
@@ -69,7 +69,7 @@
                                         <th>Birthday</th>
                                         <th>Email</th>
                                         <th>Phone Number</th>
-                                        <th>Actions</th>
+                                        <th class="text-center">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -81,7 +81,7 @@
                                             <td>{{ users.email }}</td>
                                             <td>{{ users.phone_number }}</td>
                                         
-                                            <td>
+                                            <td class="text-center">
                                                 {% if users.id not in unique_admins %}
                                                     <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal" 
                                                             data-id="{{ users.id }}">
