--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -18,7 +18,7 @@
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
                 </a>
                 <a class="navbar-brand mb-0" href="/">
-                    Sustainable Food Supply Chain
+                    GreenProof
                 </a>
             </div>
 
@@ -111,30 +111,30 @@
             </div>
         </div>
     </div>
-    <footer class="bg-dark text-light py-4 mt-auto w-100">
+    <footer class="bg-dark text-light py-4">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>Farm Fresh Market</h5>
-                    <p>Connecting farmers and consumers directly</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-light">About Us</a></li>
-                        <li><a href="#" class="text-light">Products</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Follow Us</h5>
-                    <div class="social-icons">
-                        <i class="bi bi-facebook me-2"></i>
-                        <i class="bi bi-twitter-x me-2"></i>
-                        <i class="bi bi-instagram"></i>
-                    </div>
-                </div>
-            </div>
+        <div class="row">
+        <div class="col-md-4">
+        <h5>GreenProof</h5>
+        <p>Empowering a greener future from farm to table</p>
+        </div>
+        <div class="col-md-4">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+        <li><a href="/#about" class="text-light">About Us</a></li>
+        <li><a href="/#products" class="text-light">Greener Companies</a></li>
+        <li><a href="/#contact" class="text-light">Contact</a></li>
+        </ul>
+        </div>
+        <div class="col-md-4">
+        <h5>Follow Us</h5>
+        <div class="social-icons">
+        <i class="bi bi-facebook me-2"></i>
+        <i class="bi bi-twitter-x me-2"></i>
+        <i class="bi bi-instagram"></i>
+        </div>
+        </div>
+        </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
