--- a/app/templates/MFA.html
+++ b/app/templates/MFA.html
@@ -18,7 +18,7 @@
                             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
                         </a>
                         <a class="navbar-brand mb-0" href="/">
-                            Sustainable Food Supply Chain
+                            GreenProof
                         </a>
                     </div>
                 </div>
