--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sustainable Food Supply Chain</title>
+<title>GreenProof</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="static/index.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -18,7 +18,7 @@
                         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
                     </a>
                     <a class="navbar-brand mb-0" href="/">
-                        Sustainable Food Supply Chain
+                      GreenProof
                     </a>
                 </div>
         
@@ -296,13 +296,13 @@
 <div class="container">
 <div class="row">
 <div class="col-md-4">
-<h5>Farm Fresh Market</h5>
-<p>Connecting farmers and consumers directly</p>
+<h5>GreenProof</h5>
+<p>Empowering a greener future from farm to table</p>
 </div>
 <div class="col-md-4">
 <h5>Quick Links</h5>
 <ul class="list-unstyled">
-<li><a href="#about-us" class="text-light">About Us</a></li>
+<li><a href="#about" class="text-light">About Us</a></li>
 <li><a href="#products" class="text-light">Greener Companies</a></li>
 <li><a href="#contact" class="text-light">Contact</a></li>
 </ul>
