--- a/app/templates/information_company.html
+++ b/app/templates/information_company.html
@@ -18,7 +18,7 @@
                         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
                     </a>
                     <a class="navbar-brand mb-0" href="/">
-                        Sustainable Food Supply Chain
+                        GreenProof
                     </a>
                 </div>
         
@@ -134,15 +134,15 @@
         <div class="container">
         <div class="row">
         <div class="col-md-4">
-        <h5>Farm Fresh Market</h5>
-        <p>Connecting farmers and consumers directly</p>
+        <h5>GreenProof</h5>
+        <p>Empowering a greener future from farm to table</p>
         </div>
         <div class="col-md-4">
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
-        <li><a href="#" class="text-light">About Us</a></li>
-        <li><a href="#" class="text-light">Products</a></li>
-        <li><a href="#" class="text-light">Contact</a></li>
+        <li><a href="/#about" class="text-light">About Us</a></li>
+        <li><a href="/#products" class="text-light">Greener Companies</a></li>
+        <li><a href="/#contact" class="text-light">Contact</a></li>
         </ul>
         </div>
         <div class="col-md-4">
