--- a/app/templates/modify_company.html
+++ b/app/templates/modify_company.html
@@ -16,7 +16,7 @@
                 <a href="/" class="nav-link p-0 me-2">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Home" height="40">
                 </a>
-                <a class="navbar-brand mb-0" href="/">Sustainable Food Supply Chain</a>
+                <a class="navbar-brand mb-0" href="/">GreenProof</a>
             </div>
             <div class="d-flex align-items-center">
                 {% if user_id %}
@@ -237,28 +237,28 @@
 
 <footer class="bg-dark text-light py-4">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>Farm Fresh Market</h5>
-                <p>Connecting farmers and consumers directly</p>
-            </div>
-            <div class="col-md-4">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#" class="text-light">About Us</a></li>
-                    <li><a href="#" class="text-light">Products</a></li>
-                    <li><a href="#" class="text-light">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h5>Follow Us</h5>
-                <div class="social-icons">
-                    <i class="bi bi-facebook me-2"></i>
-                    <i class="bi bi-twitter-x me-2"></i>
-                    <i class="bi bi-instagram"></i>
-                </div>
-            </div>
-        </div>
+    <div class="row">
+    <div class="col-md-4">
+    <h5>GreenProof</h5>
+    <p>Empowering a greener future from farm to table</p>
+    </div>
+    <div class="col-md-4">
+    <h5>Quick Links</h5>
+    <ul class="list-unstyled">
+    <li><a href="/#about" class="text-light">About Us</a></li>
+    <li><a href="/#products" class="text-light">Greener Companies</a></li>
+    <li><a href="/#contact" class="text-light">Contact</a></li>
+    </ul>
+    </div>
+    <div class="col-md-4">
+    <h5>Follow Us</h5>
+    <div class="social-icons">
+    <i class="bi bi-facebook me-2"></i>
+    <i class="bi bi-twitter-x me-2"></i>
+    <i class="bi bi-instagram"></i>
+    </div>
+    </div>
+    </div>
     </div>
 </footer>
 
