--- a/app/templates/notifications.html
+++ b/app/templates/notifications.html
@@ -491,32 +491,32 @@ function removeNotification(notificationCard) {
     {% endif %}
 </main>
 
-    <footer class="bg-dark text-light py-4 mt-auto">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>Farm Fresh Market</h5>
-                    <p>Connecting farmers and consumers directly</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-light">About Us</a></li>
-                        <li><a href="#" class="text-light">Products</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Follow Us</h5>
-                    <div class="social-icons">
-                        <i class="bi bi-facebook me-2"></i>
-                        <i class="bi bi-twitter-x me-2"></i>
-                        <i class="bi bi-instagram"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+<footer class="bg-dark text-light py-4">
+    <div class="container">
+    <div class="row">
+    <div class="col-md-4">
+    <h5>GreenProof</h5>
+    <p>Empowering a greener future from farm to table</p>
+    </div>
+    <div class="col-md-4">
+    <h5>Quick Links</h5>
+    <ul class="list-unstyled">
+    <li><a href="#about" class="text-light">About Us</a></li>
+    <li><a href="#products" class="text-light">Greener Companies</a></li>
+    <li><a href="#contact" class="text-light">Contact</a></li>
+    </ul>
+    </div>
+    <div class="col-md-4">
+    <h5>Follow Us</h5>
+    <div class="social-icons">
+    <i class="bi bi-facebook me-2"></i>
+    <i class="bi bi-twitter-x me-2"></i>
+    <i class="bi bi-instagram"></i>
+    </div>
+    </div>
+    </div>
+    </div>
+</footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
